fix(aside-wrapper): spacing

--- a/assets/scss/components/_aside-wrapper.scss
+++ b/assets/scss/components/_aside-wrapper.scss
@@ -1,18 +1,55 @@
 .aside__wrapper {
   display: flex;
+  margin-bottom: 2rem;
   @include media-breakpoint-down(xl) {
     flex-direction: row;
   }
   @include media-breakpoint-down(md) {
     flex-direction: column;
   }
-  width: 100%;
-  gap: 2em;
-  margin-bottom: 2em;
+  gap: spacing(14);
   .left__side {
     flex: 1 1 60%;
   }
   .right__side {
     flex: 1 1 40%;
+    right: 0;
+
+    img {
+      width: 100%;
+      //margin-bottom: spacing(6);
+    }
   }
 }
+
+/*
+    &.has-aside {
+          @include media-breakpoint-up(lg) {
+            width: 60%;
+          }
+        }
+
+    &.is-aside {
+      @include media-breakpoint-up(lg) {
+        width: 40%;
+        position: absolute;
+        padding-left: spacing(14);
+        right: 0;
+        transform: translateY(-100%);
+        margin-bottom: 0;
+
+        img {
+          max-width: inherit;
+          left: 0;
+          width: 100%;
+          margin-bottom: spacing(6);
+          margin-top: 0;
+        }
+      }
+
+      @include media-breakpoint-up(xl) {
+        img {
+          width: calc(100% + #{$richtext-offset-spacing-xl});
+        }
+      }
+    }*/
